--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 Hello World
+gesture swipe up	4 xdotool key super
+gesture swipe down	4 xdotool key super+d
+gesture swipe left	4 xdotool key super+Page_Down
+gesture swipe right	4 xdotool key super+Page_Up
